--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
             >Data Deletion</a
           >
         </li>
+        <li>
+          <a href="terms-of-service.html" class="text-blue-600 hover:underline"
+            >Terms of Service</a
+          >
+        </li>
       </ul>
     </div>
   </body>
