--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -23,14 +23,16 @@
           <h1 class="text-3xl font-bold mb-6">
             Privacy Policy for Cindy by Cinder Growth
           </h1>
-          <p class="text-gray-600 mb-8">Last updated: January 30, 2025</p>
+          <p class="text-gray-600 mb-8">Last updated: March 3, 2025</p>
 
           <section class="mb-8">
             <h2 class="text-2xl font-semibold mb-4">1. Introduction</h2>
             <p class="mb-4">
               Welcome to Cindy ("we," "our," or "us"). This Privacy Policy
               explains how we collect, use, disclose, and safeguard your
-              information when you use our application.
+              information when you use our application. Our service allows small businesses 
+              to manage their analytics and social media accounts from multiple platforms 
+              in one centralized location.
             </p>
           </section>
 
@@ -44,9 +46,30 @@
             <ul class="list-disc ml-6 mb-4">
               <li>Account information (name, email, business details)</li>
               <li>Social media account access tokens and related data</li>
-              <li>Analytics data from connected platforms</li>
+              <li>Analytics data from connected platforms (such as Google Analytics, Meta/Facebook, TikTok, etc.)</li>
               <li>Content and media you upload to our platform</li>
+              <li>Usage information about how you interact with our Service</li>
+              <li>Device information including IP address, browser type, and operating system</li>
             </ul>
+            
+            <h3 class="text-xl font-semibold mb-2 mt-4">OAuth and Platform Integrations</h3>
+            <p class="mb-4">
+              When you connect your accounts from platforms such as Google, Meta/Facebook, TikTok, 
+              and other services using OAuth or similar protocols, we receive access tokens and 
+              information from these platforms. This information may include:
+            </p>
+            <ul class="list-disc ml-6 mb-4">
+              <li>Account IDs and basic account information</li>
+              <li>Analytics and performance metrics</li>
+              <li>Audience and engagement data</li>
+              <li>Ad campaign data and metrics</li>
+              <li>Content performance statistics</li>
+            </ul>
+            <p class="mb-4">
+              The specific data we collect depends on the permissions you grant and the platforms 
+              you connect. You can revoke our access to these platforms at any time through your 
+              account settings or by following the instructions in our Data Deletion page.
+            </p>
           </section>
 
           <section class="mb-8">
@@ -59,6 +82,10 @@
               <li>Process and complete transactions</li>
               <li>Send you technical notices and support messages</li>
               <li>Analyze usage patterns and trends</li>
+              <li>Aggregate and display analytics from multiple platforms within your dashboard</li>
+              <li>Generate insights and recommendations based on your data</li>
+              <li>Develop new features and services</li>
+              <li>Detect and prevent fraud and abuse</li>
             </ul>
           </section>
 
@@ -68,34 +95,84 @@
             </h2>
             <p class="mb-4">We may share your information with:</p>
             <ul class="list-disc ml-6 mb-4">
-              <li>Third-party service providers</li>
-              <li>Connected social media platforms</li>
+              <li>Third-party service providers who perform services on our behalf (hosting, data analysis, payment processing, customer service)</li>
+              <li>Connected social media and analytics platforms as necessary to provide our services</li>
               <li>As required by law or to protect rights</li>
+              <li>In connection with a business transfer (merger, acquisition, or sale of assets)</li>
             </ul>
-          </section>
-
-          <section class="mb-8">
-            <h2 class="text-2xl font-semibold mb-4">5. Data Security</h2>
             <p class="mb-4">
-              We implement appropriate technical and organizational security
-              measures to protect your information from unauthorized access,
-              disclosure, alteration, and destruction.
+              We do not sell your personal information or share it with third parties for their direct 
+              marketing purposes without your consent.
             </p>
           </section>
 
           <section class="mb-8">
-            <h2 class="text-2xl font-semibold mb-4">6. Your Rights</h2>
+            <h2 class="text-2xl font-semibold mb-4">5. Data Retention</h2>
+            <p class="mb-4">
+              We retain your information for as long as your account is active or as needed to provide 
+              you services. We will retain and use your information as necessary to comply with our 
+              legal obligations, resolve disputes, and enforce our agreements. 
+            </p>
+            <p class="mb-4">
+              For analytics data retrieved from third-party platforms, we typically store this data 
+              for up to 24 months to provide historical comparisons and trend analysis. You can 
+              request deletion of your data at any time by following the process outlined in our 
+              Data Deletion page.
+            </p>
+          </section>
+
+          <section class="mb-8">
+            <h2 class="text-2xl font-semibold mb-4">6. International Data Transfers</h2>
+            <p class="mb-4">
+              Your information may be transferred to, and maintained on, computers located outside of your 
+              state, province, country, or other governmental jurisdiction where the data protection laws 
+              may differ from those in your jurisdiction. If you are located outside the United States and 
+              choose to provide information to us, please note that we transfer the information to the 
+              United States and process it there.
+            </p>
+          </section>
+
+          <section class="mb-8">
+            <h2 class="text-2xl font-semibold mb-4">7. Data Security</h2>
+            <p class="mb-4">
+              We implement appropriate technical and organizational security
+              measures to protect your information from unauthorized access,
+              disclosure, alteration, and destruction. These measures include encryption 
+              of sensitive data, regular security assessments, and strict access controls. 
+              However, no method of transmission over the Internet or electronic storage 
+              is 100% secure, so we cannot guarantee absolute security.
+            </p>
+          </section>
+
+          <section class="mb-8">
+            <h2 class="text-2xl font-semibold mb-4">8. Your Rights</h2>
             <p class="mb-4">You have the right to:</p>
             <ul class="list-disc ml-6 mb-4">
               <li>Access your personal information</li>
               <li>Correct inaccurate data</li>
               <li>Request deletion of your data</li>
               <li>Withdraw consent</li>
+              <li>Object to processing in certain circumstances</li>
+              <li>Request data portability</li>
+              <li>Disconnect third-party platform integrations at any time</li>
             </ul>
+            <p class="mb-4">
+              To exercise these rights, please contact us using the information in Section 10 
+              or follow the procedures in our Data Deletion page.
+            </p>
           </section>
 
           <section class="mb-8">
-            <h2 class="text-2xl font-semibold mb-4">7. Contact Us</h2>
+            <h2 class="text-2xl font-semibold mb-4">9. Children's Privacy</h2>
+            <p class="mb-4">
+              Our Service is not intended for use by children under the age of 16. We do not knowingly 
+              collect personal information from children under 16. If you are a parent or guardian and 
+              believe we have collected information from your child, please contact us immediately.
+            </p>
+          </section>
+
+          <section class="mb-8">
+            <h2 class="text-2xl font-semibold mb-4">10. Contact Us</h2>
             <p class="mb-4">
               For any questions about this Privacy Policy, please contact:
             </p>
@@ -107,11 +184,13 @@
 
           <section class="mb-8">
             <h2 class="text-2xl font-semibold mb-4">
-              8. Changes to This Policy
+              11. Changes to This Policy
             </h2>
             <p class="mb-4">
               We may update this policy from time to time. We will notify you of
-              any changes by posting the new policy on this page.
+              any material changes by posting the new policy on this page and, where 
+              appropriate, sending you a notification. We encourage you to review this 
+              Privacy Policy periodically.
             </p>
           </section>
         </article>
