--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -177,7 +177,7 @@
               For any questions about this Privacy Policy, please contact:
             </p>
             <ul class="list-none mb-4">
-              <li>Email: contact@cindergrowth.com</li>
+              <li>Email: info@cindergrowth.com</li>
               <li>Website: https://cindergrowth.com</li>
             </ul>
           </section>
