--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -144,7 +144,7 @@
               If you have any questions about these Terms, please contact us at:
             </p>
             <ul class="list-none mb-4">
-              <li>Email: contact@cindergrowth.com</li>
+              <li>Email: info@cindergrowth.com</li>
               <li>Website: https://cindergrowth.com</li>
             </ul>
           </section>
